[gd_scene load_steps=6 format=3 uid="uid://ckhycasoe3x4j"]

[ext_resource type="Script" uid="uid://dek0ejhneg1da" path="res://other/spawner/spawner.gd" id="1_ttk4a"]
[ext_resource type="Shader" uid="uid://dqkxjnbm25vag" path="res://shaders/old_effect.gdshader" id="2_b0h12"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khvsl"]
size = Vector2(1280, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhote"]
size = Vector2(1280, 520)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pcocn"]
shader = ExtResource("2_b0h12")
shader_parameter/scanline_intensity = 0.01

[node name="Spawner" type="Marker2D"]
script = ExtResource("1_ttk4a")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 320)

[node name="MoveUpArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="MoveUpCollision" type="CollisionShape2D" parent="MoveUpArea"]
position = Vector2(0, 160)
shape = SubResource("RectangleShape2D_khvsl")

[node name="MoveDownArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveDownArea"]
position = Vector2(0, 260)
shape = SubResource("RectangleShape2D_nhote")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BlinkRedColor" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_pcocn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CometSpawn" type="Node2D" parent="."]

[node name="Spawner" type="RayCast2D" parent="CometSpawn"]
position = Vector2(-870, -175)
target_position = Vector2(70, 85)

[node name="Spawner2" type="RayCast2D" parent="CometSpawn"]
position = Vector2(-415, -375)
target_position = Vector2(25, 100)

[node name="Spawner3" type="RayCast2D" parent="CometSpawn"]
position = Vector2(395, -395)
target_position = Vector2(-25, 90)

[node name="Spawner4" type="RayCast2D" parent="CometSpawn"]
position = Vector2(765, -230)
target_position = Vector2(-60, 100)

[node name="SpawnComet" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="SpawnComet" to="." method="generate_comet"]
